kube-system/32-ingress.demo.yml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/permanent-redirect: https://wavebook.io
    nginx.ingress.kubernetes.io/permanent-redirect-code: "308"
    nginx.ingress.kubernetes.io/backend-protocol: https
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
  labels:
    app: wavebook-wp-wordpress
    release: wavebook-wp
  name: wavebook-wp-wordpress-demo
  namespace: wavebook-alpha
spec:
  rules:
  - host: demo.wavebook.io
status:
  loadBalancer:
    ingress:
    - hostname: a7bc9a6768c5411e9b75d06b582141c5-631232816.ap-east-1.elb.amazonaws.com
